  01 Apr 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de> -Manifest,
  -openttd-1.3.0_rc3.ebuild:
  openttd: removed 1.3.0_rc3

*openttd-1.3.0_rc3 (19 Mar 2013)

  19 Mar 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +openttd-1.3.0_rc3.ebuild, -openttd-1.3.0_rc2.ebuild:
  openttd: version bump

*openttd-1.3.0_rc2 (07 Mar 2013)

  07 Mar 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +openttd-1.3.0_rc2.ebuild, -openttd-1.3.0_rc1.ebuild:
  openttd: version bump

  27 Feb 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  openttd-1.3.0_rc1.ebuild, openttd-9999.ebuild:
  openttd: corrected openmedia dependencies

  21 Feb 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  openttd-1.3.0_rc1.ebuild, openttd-9999.ebuild:
  openttd: doc use flag for nightly

  21 Feb 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  openttd-1.3.0_rc1.ebuild, openttd-9999.ebuild:
  openttd: added doc use flag

*openttd-1.3.0_rc1 (20 Feb 2013)

  20 Feb 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +openttd-1.3.0_rc1.ebuild, -openttd-1.3.0_beta2.ebuild:
  openttd dev version bump

*openttd-1.3.0_beta2 (15 Feb 2013)

  15 Feb 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +openttd-1.3.0_beta2.ebuild, -files/openttd-9999-cflags.patch,
  openttd-9999.ebuild:
  ebuild for the current openttd beta

  09 Jan 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +metadata.xml, -Manifest, openttd-9999.ebuild:
  corrected nightly (make install now automatically compresses man)