@@ -1,0 +1,23 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST openttd-1.3.0-source.tar.gz 9351230 SHA256 999ae932e9a6b1e1bf29cdddc494725cc2f2e5dce8a43e5171d575611167fe5e SHA512 9987885b5b3c92cab7435761eee7ae6dc927faf1d4d58e72f777e21b5e154a6ca4cbf940085b29bdf4c887544319bfec6043a56d384b736a1d718a09362e5ea4 WHIRLPOOL 49a1523a356891676b7aa9907b1f34b56a75cf481c2a4f12a6eeb83b27599f31d4fd7279ea3fa94f1183621a4afd562e856cee9f0c84f9aee1793f8ad7545309
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQJ8BAEBCABmBQJRWUWqXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0NEM5MDM0MjM5MkNDRUI1NUFEQjYyMTIy
+RjA0RTMxRjA3MjAxRTdEAAoJEC8E4x8HIB59XfYQAKOTM1y9UvDOAigrhKeBFiHv
+WmLyHYEb4X1ukLaMZsRocq22zRj3quThTe+FFu0lILw7eK1QRdTQrSMgndMeLnmN
+5HZuvCicnX2JVNueyZKzG7gSTkYa8hu+T5OZDIImNq1Kn4YKuDanKTHNao6J44x7
+owlReb5I34uCuhnTcA2l9MBlYKYwjNDee3MgjrNPhhB3vInK80jwxcSZvpqO/DX1
+u2kPl6e5we37vfrWt8N2f924+Syw5i1LnKiEdNQroni87NeP7iBYfHz5fxdVSm+A
+S/1xsukEhKjJTxr1dTNUUBABFXjvqOa++EC1hoNUBcmwd5vg0O11JDMVo42GD9sg
+KWabEXAUDiy/vq6nLng0VJPw4BjzvIWX/ni5QmnubY5z85VMA1igMnBNT0giVxXz
+/921txjcQRypsaGB0h2xkWO45oMOPwU0UsZ8gGKU7UBGdsGs7dlMllIlBEa3FZ3R
+t/KmvpAfdry4Of0nASUT+SfTqHY6N4zef9tmm19bK8KNWucw4sda81y6LQx6EpWT
+lRleiR6gstrXFCrp3AjlMfaj5zs/BmqMeYvsy0clYM8yU5bW5ovFwWVoIIEN80zQ
+d+wP3TW2Z8r65UYok+PFQp+oKghDMxm2FKBYyTWh7w1ow4B7Cshdg+0caz1+1rzP
+QD8ZckHXuP1T9/IcRNBU
+=WUUV
+-----END PGP SIGNATURE-----
