@@ -1,3 +1,9 @@
+*openttd-1.3.0 (01 Apr 2013)
+
+  01 Apr 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
+  +openttd-1.3.0.ebuild:
+  openttd: version bumb
+
   01 Apr 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de> -Manifest,
   -openttd-1.3.0_rc3.ebuild:
   openttd: removed 1.3.0_rc3
